@@ -1,5 +1,14 @@
 2008-09-05  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* m68k-tdep.h (m68kbsd_fpreg_offset): Add gdbarch parameter.
+	* m68kbsd-tdep.c (m68kbsd_fpreg_offset): Add gdbarch paramter.
+	Use it instead of current_gdbarch.
+	(m68kbsd_supply_fpregset): Update call.
+	* m68kbsd-nat.c (m68kbsd_supply_fpregset): Likewise.
+	(m68kbsd_collect_fpregset): Likewise.
+
+2008-09-05  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	* cris-tdep.c (cris_version, cris_mode): Remove.
 	(crisv32_single_step_through_delay): Use tdep->cris_mode.
 	(cris_breakpoint_from_pc): Likewise.
